# utf

./: README.md  utf.cabal
bench/: Main.hs
generators/: Generators.hs
parsers/Data/Attoparsec/: UTF8.hs
parsers/Data/Text/: Copy.hs  UTF8.hs
parsers/Parser/: Handler.hs
src/Codec/Encoding/: UTF8.hs
test/conformance/: Main.hs
test/conformance/Test/: UTF8.hs
