cabal-version:      2.2
name:               utf
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
-- author:
maintainer:         frozenwitness@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common simdutf
  include-dirs: simdutf
  cxx-sources: simdutf/simdutf.cpp
               cbits/validate_utf8.cpp
  cxx-options: -std=c++17
  cpp-options: -DSIMDUTF

  if impl(ghc >= 9.4)
    build-depends: system-cxx-std-lib == 1.0
  elif os(darwin) || os(freebsd)
    extra-libraries: c++
  elif os(openbsd)
    extra-libraries: c++ c++abi pthread
  elif os(windows)
    -- GHC's Windows toolchain is based on clang/libc++ in GHC 9.4 and later
    if impl(ghc < 9.3)
      extra-libraries: stdc++
    else
      extra-libraries: c++ c++abi
  elif arch(wasm32)
    cpp-options: -DSIMDUTF_NO_THREADS
    cxx-options: -fno-exceptions
    extra-libraries: c++ c++abi
  else
    extra-libraries: stdc++

library
  exposed-modules:  Codec.Encoding.UTF8

  -- other-modules:

  -- other-extensions:

  ghc-options:      -Wall
                    -O2

  build-depends:    attoparsec
                  , base >= 4.9 && < 5

  hs-source-dirs:   src

  default-language: Haskell2010

test-suite conformance
  import:           simdutf

  type:             exitcode-stdio-1.0

  main-is:          Main.hs

  build-depends:    attoparsec
                  , base
                  , bytestring
                  , hspec
                  , text
                  , utf

  ghc-options:      -Wall

  hs-source-dirs:   parsers
                  , test/conformance

  default-language: Haskell2010

benchmark bench
  import:           simdutf

  type:             exitcode-stdio-1.0

  main-is:          Main.hs

  build-depends:    attoparsec
                  , base
                  , bytestring
                  , deepseq
                  , entropy
                  , gauge
                  , random
                  , text
                  , utf

  ghc-options:      -Wall

  hs-source-dirs:   generators
                  , parsers
                  , bench

  default-language: Haskell2010
